testing the API

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <script
+      src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
   </head>
   <body>
-    <div style="width: 640px; height: 480px" id="mapContainer"></div>
+    <div style="width: 800px; height: 500px" id="mapContainer"></div>
     <script src="./map.js"></script>
   </body>
 </html>
