--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+    <link rel="stylesheet" href="index.css" />
     <script
       src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
       type="text/javascript"
