--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <div class="main-container">
       <div style="width: 800px; height: 500px" id="mapContainer">
-        <button>
+        <button id="startSearchButton">
           SEARCH REQUEST
         </button>
       </div>
