css layout implementation

--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
   </head>
   <body>
     <div class="main-container">
-      <div style="width: 800px; height: 500px" id="mapContainer">
-        <button>
-          SEARCH REQUEST
-        </button>
+      <div class="left-container">
+        <div id="mapContainer"></div>
+      </div>
+      <div class="right-container">
+        <div class="search-event-button">
+          <button type="button" class="search-event-button-style button-shadow">
+            Start Search
+          </button>
+        </div>
       </div>
     </div>
   </body>
