search-functionality for button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       </div>
       <div class="right-container">
         <div class="search-event-button">
-          <button type="button" class="search-event-button-style button-shadow">
+          <button
+            type="button"
+            class="search-event-button-style button-shadow"
+            id="startSearchButton"
+          >
             Start Search
           </button>
         </div>
