--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       type="text/css"
       href="https://js.api.here.com/v3/3.1/mapsjs-ui.css"
     />
     <script src="./map.js" type="module"></script>
+    <script src="./search-functions.js" type="module"></script>
   </head>
   <body>
     <div class="main-container">
