Small UI Changes

--- a/index.html
+++ b/index.html
@@ -50,11 +50,20 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="header-bar">
-        <h1>
-          Welcome to Meet-Me
-        </h1>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Meet me</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
       <div class="content-container">
         <div class="left-container">
           <div id="mapContainer"></div>
@@ -124,6 +133,9 @@
           </button>
         </div>
       </div>
+    </div>
+    <div class="footer">
+      <p id="footer-text">Built @ DevWeek Hackathon 2020</p>
     </div>
   </body>
 </html>
